# capstone

./: .gitignore  CONTRIBUTING.md  README.md  TRAINING.md  TRAINING_README.md  conf.py  evaluation_results.json  impl.ipynb  index.rst  main.ipynb  pyproject.toml  requirements.txt  run_small_training.py  test_dataset.py  train_launcher.py
.cursor/rules/: uv.mdc
.github/workflows/: tests.yml
configs/: base_config.yaml  fast_test_config.yaml  gpt2_frozen_config.yaml  large_config.yaml  small_config.yaml
secure-transformer/: __main__.py  model.py  tests.py  utils.py
secure_transformer/: __main__.py  config.py  dataset.py  evaluate.py  model.py  train.py
secure_transformer/tests/: __init__.py  crypto.py  equivariance.py
