[project]
name = "secure_transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "numpy>=2.3.0",
    "pytest>=8.4.1",
    "scipy>=1.15.3",
    "tenseal>=0.3.16",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "wandb>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["secure_transformer/tests"]
pythonpath = ["."]
python_files = ["*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
